# Triskarino

./: README  README.md
arduino_control/: test.py
arduino_control/ArduinoTouch/: ArduinoTouch.ino
arduino_control/ArduinoTouchArray/: ArduinoTouchArray.ino
arduino_control/ArduinoTouchHead/: ArduinoTouchHead.ino
arduino_control/libraries/ViRHas/: ViRHas.cpp  ViRHas.h
arduino_control/libraries/ViRHas2.0/: ViRHas2.0.cpp  ViRHas2.0.h
arduino_control/light/: light.ino
arduino_control/lights/: lights.ino
arduino_control/main/: main.ino
arduino_control/main_v2/: main_v2.ino
oldrepo/: README.md
triskarino_robot/: .gitignore
triskarino_robot/src/triskarino_action_controller/: CMakeLists.txt
triskarino_robot/src/triskarino_bringup/: CMakeLists.txt
triskarino_robot/src/triskarino_description/: CMakeLists.txt  package.xml
triskarino_robot/src/triskarino_description/config/: joint_velocity.yaml
triskarino_robot/src/triskarino_description/launch/: rviz.launch
triskarino_robot/src/triskarino_description/meshes/: base_v2.stl  cover.dae  get_mesh_inertial.py
triskarino_robot/src/triskarino_description/src/: teleop_omni3.py
triskarino_robot/src/triskarino_description/urdf/: base.xacro  lidar.xacro  materials.xacro  rim.urdf.xacro  roller.urdf.xacro  triskarino.urdf.xacro  triskarino_core.xacro  triskarino_cover.xacro  triskarino_motor.xacro  triskarino_plate.xacro  triskarino_top.xacro  triskarino_wheel.xacro
triskarino_robot/src/triskarino_hw/: CMakeLists.txt  package.xml
triskarino_robot/src/triskarino_hw/launch/: arduino_manager.launch
triskarino_robot/src/triskarino_hw/scripts/: arduino_manager.py  arduino_sensor_manager.py  arduino_wheels_manager.py  lights_manager.py  odom_manager.py  sound_manager.py  teleop_manager.py
triskarino_robot/src/triskarino_msgs/: CMakeLists.txt  package.xml
triskarino_robot/src/triskarino_msgs/msg/: Light.msg  Sonar.msg  Sound.msg
triskarino_robot/triskarino_action_controller/: package.xml
triskarino_robot/triskarino_bringup/: package.xml
triskarino_robot/triskarino_description/: CMakeLists.txt  model.config  package.xml
triskarino_robot/triskarino_description/config/: joint_velocity.yaml
triskarino_robot/triskarino_description/launch/: rviz.launch  rviz_navigation.launch  spawn_gazebo.launch  state_publisher.launch  teleop_simulation.launch  urdf_gazebo_view.launch  velocity_controller.launch
triskarino_robot/triskarino_description/meshes/: get_mesh_inertial.py  rim_scaled.stl  robot_base.stl  roller_scaled.stl
triskarino_robot/triskarino_description/plugin/: CMakeLists.txt  main.cc
triskarino_robot/triskarino_description/rviz_config/: navigation_config.rviz
triskarino_robot/triskarino_description/src/: teleop_omni3.py
triskarino_robot/triskarino_description/urdf/: base.urdf.xacro  base.xacro  hokuyo.xacro  materials.xacro  rim.urdf.xacro  roller.urdf.xacro  triskarino.sdf  triskarino.urdf  triskarino.urdf.xacro  triskarino_core.xacro  triskarino_cylinder.xacro  triskarino_top.xacro
triskarino_robot/triskarino_description/worlds/: triskarino.world  triskarino_planar.world
triskarino_robot/triskarino_hw/: CMakeLists.txt  package.xml  requirements.txt  setup.py
triskarino_robot/triskarino_hw/cfg/: MyParams_Volume.cfg
triskarino_robot/triskarino_hw/config/: arduino_param.yaml  laser_filter.yaml  lidar_config.yaml  touch_param.yaml  twist_mux.yaml
triskarino_robot/triskarino_hw/launch/: debug_movement.launch  lidar.launch  sound_light.launch  teleop.launch  teleop_all.launch  touch.launch  touch_rosserial.launch  twist_mux.launch
triskarino_robot/triskarino_hw/scripts/: camera_manager.py  debug_arduino.py  debug_odometry.py  debug_teleop.py  lights_manager.py  odom_manager.py  speed_manager.py  teleop_manager.py  teleop_manager_2.py
triskarino_robot/triskarino_msgs/: CMakeLists.txt
triskarino_robot/triskarino_msgs/msg/: Light.msg  RawOdometry.msg  touchdata.msg
triskarino_robot/triskarino_navigation/: CMakeLists.txt  package.xml
triskarino_robot/triskarino_navigation/launch/: mapping.launch  mapping_simulation.launch  navigation.launch  navigation_simulation.launch
triskarino_robot/triskarino_navigation/maps/: simulation_map.pgm  simulation_map.yaml
triskarino_robot/triskarino_navigation/params/: amcl.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  gmapping.yaml  gmapping_simulation.yaml  remote_machine.yaml
triskarino_robot/triskarino_perception/: CMakeLists.txt  package.xml
triskarino_robot/triskarino_robot/: CMakeLists.txt  package.xml
