<?xml version="1.0"?>
<package format="2">
  <name>triskarino_hw</name>
  <version>0.0.0</version>
  <description>The triskarino_hw package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="massimiliano@todo.todo">massimiliano</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-serial</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>triskarino_msgs</build_depend>
  <exec_depend>python-serial</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>triskarino_msgs</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>twist_mux</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
