<?xml version="1.0"?>
<package format="2">
  <name>triskarino_robot</name>
  <version>0.0.0</version>
  <description>The triskarino_robot package</description>

  
  <maintainer email="massimiliano@todo.todo">massimiliano</maintainer>


  
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>triskarino_description</exec_depend>
  <exec_depend>triskarino_msgs</exec_depend>
  <exec_depend>triskarino_bringup</exec_depend>
  <exec_depend>triskarino_action_controller</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
